<resources>
    <string name="Add_a_button_was_clicked">添加按钮被点击</string>
    <string name="Add_a_friend">加个好友呗</string>
    <string name="Add_group_members_fail">添加群成员失败:</string>
    <string name="Agree_with_failure">同意失败:</string>
    <string name="Agreed_to_your_group_chat_application">同意了你的群聊申请</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="Apply_to_the_group_of">申请加入群：</string>
    <string name="Are_agree_with">正在同意...</string>
    <string name="Are_connected_to_each_other">正在连接对方...</string>
    <string name="Are_logged_out">正在退出登录..</string>
    <string name="Are_moving_to_blacklist">正在移入至黑名单</string>
    <string name="Are_removed">正在移除...</string>
    <string name="Cancel">取消</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="Change_the_group_name">改变群名称</string>
    <string name="Confirm_password_cannot_be_empty">确认密码不能为空!</string>
    <string name="Connection_failure">连接建立失败！...</string>
    <string name="Current_version">当前版本</string>
    <string name="Delete_failed">删除失败:</string>
    <string name="Delete_the_contact">删除联系人</string>
    <string name="Did_not_download">未下载</string>
    <string name="Dissolve_group_chat_tofail">解散群聊失败:</string>
    <string name="Download_the_pictures">下载图片: 0%</string>
    <string name="Download_the_pictures_new">下载图片:</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Ensure">确定</string>
    <string name="Exit_the_group_chat">退出群聊</string>
    <string name="Exit_the_group_chat_failure">退出群聊失败:</string>
    <string name="Failed_to_create_groups">创建群组失败:</string>
    <string name="Failed_to_download_file">下载文件失败:</string>
    <string name="Failed_to_get_group_chat_information">获取群聊信息失败:</string>
    <string name="Failed_to_join_the_group_chat">加入群聊失败:</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="Group_chat">群聊:</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Group_name_cannot_be_empty">群组名称不能为空</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Hands_free">免提</string>
    <string name="Has_agreed_to">已同意</string>
    <string name="Has_agreed_to_your_friend_request">已同意你的好友请求</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="Has_refused_to">已拒绝</string>
    <string name="Have_downloaded">已下载</string>
    <string name="In_the_call">通话中...</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="Introduction">简介</string>
    <string name="Invite_you_to_join_a_group_chat">邀请你加入了群聊</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="Is_landing">正在登陆...</string>
    <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
    <string name="Is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="Is_sending_a_request">正在发送请求...</string>
    <string name="Is_the_registered">正在注册...</string>
    <string name="Is_to_create_a_group_chat">正在创建群聊...</string>
    <string name="Is_unblock">正在解除屏蔽...</string>
    <string name="Join_the_group_chat">加入群聊成功</string>
    <string name="Less_than_chat_server_connection">连接不到聊天服务器</string>
    <string name="Log_Upload_failed">log上传失败</string>
    <string name="Log_uploaded_successfully">日志上传成功</string>
    <string name="Login_failed">登录失败:</string>
    <string name="Logoff_notification">下线通知</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="Modify_the_group_name_successful">修改群名称成功</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Move_into_the_blacklist_new">移入到黑名单</string>
    <string name="Network_error">网络出错</string>
    <string name="Not_Set">未设置</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="Order_Review">查看订单</string>
    <string name="Password_cannot_be_empty">密码不能为空！</string>
    <string name="Please_enter_a_username">请输入用户名</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="Refused">已拒绝</string>
    <string name="Registered_successfully">注册成功</string>
    <string name="Registration_failed">注册失败:</string>
    <string name="Remove_the_notification">移除通知</string>
    <string name="Removed_from_the_failure">移出失败</string>
    <string name="Request_add_buddy_failure">请求添加好友失败:</string>
    <string name="Request_to_add_you_as_a_friend">请求加你为好友</string>
    <string name="Request_to_join">请求加入</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Send_the_following_pictures">发送以下图片？</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="The_delete_button_is_clicked">删除按钮被点击</string>
    <string name="The_dissolution_of_chatting">解散群聊</string>
    <string name="The_dissolution_of_chatting_new">解散群聊</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="The_other_is_hang_up">对方已经挂断</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="The_other_party_did_not_answer_new">对方未接听</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_party_is_not_online">对方不在线，请稍后再拨...</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接受！...</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="This_user_is_already_your_friend">此用户已是你的好友</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="Two_input_password">两次输入的密码不一致，请重新输入!</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="User_already_exists">用户已存在！</string>
    <string name="User_name_cannot_be_empty">用户名不能为空！</string>
    <string name="VAT_invoice">增值税发票</string>
    <string name="Version_number_is_wrong">版本号错误</string>
    <string name="Video_footage">拍摄录像</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="ablum_photo_count">(%d张)</string>
    <string name="about">关于</string>
    <string name="account_balance">账户余额: </string>
    <string name="account_balance_use">使用余额: </string>
    <string name="account_myb_balance_use">使用美盈宝: </string>
    <string name="account_name">用户名:</string>
    <string name="action_settings">Settings</string>
    <string name="activate_code">激活码:</string>
    <string name="activate_coupons_activation_code">激活码：</string>
    <string name="activate_coupons_check_code">验证码：</string>
    <string name="activate_coupons_number">编\u0009\u0009号：</string>
    <string name="activate_coupons_prompt_check_code_error">验证码错误</string>
    <string name="activate_coupons_prompt_coupons_error">激活码有误，请重新输入</string>
    <string name="activate_coupons_prompt_coupons_invalid">您输入的优惠券无效</string>
    <string name="activities_time">活动时间:</string>
    <string name="activity_remote_service_binding">AppDemo4</string>
    <string name="add_boarding_person">新增登机人</string>
    <string name="add_friend">添加好友</string>
    <string name="add_shopcart">加入购物车</string>
    <string name="add_shopping_cart">加入购物车</string>
    <string name="address">"地    址:"</string>
    <string name="address_book">通讯录</string>
    <string name="address_county">区/县</string>
    <string name="address_province">省/直辖市</string>
    <string name="agree">同意</string>
    <string name="alipay_fail_msg">更新支付宝快捷支付失败，请联系支付宝</string>
    <string name="alipay_wallet_fali_msg">更新支付宝钱包快捷支付失败，请联系支付宝</string>
    <string name="all">全部</string>
    <string name="allowance">[补贴]</string>
    <string name="alp_pkey_display_captcha_wired_dots">alp.pkey.display.captcha_wired_dots</string>
    <string name="alp_pkey_display_max_retry">alp.pkey.display.max_retry</string>
    <string name="alp_pkey_display_min_wired_dots">alp.pkey.display.min_wired_dots</string>
    <string name="alp_pkey_display_stealth_mode">alp.pkey.display.stealth_mode</string>
    <string name="alp_pkey_sys_auto_save_pattern">alp.pkey.sys.auto_save_pattern</string>
    <string name="alp_pkey_sys_encrypter_class">alp.pkey.sys.encrypter_class</string>
    <string name="alp_pkey_sys_pattern">alp.pkey.sys.pattern</string>
    <string name="already_reply">已回复</string>
    <string name="announcement">商城公告</string>
    <string name="announcement_detail">公告详情</string>
    <string name="answer">接听</string>
    <string name="appMeas_actiCenter">活动中心</string>
    <string name="hot_sell">热销榜</string>
    <string name="hot_spot">热点榜</string>
    <string name="identify_code">验证码</string>
    <string name="identify_code_get">获取验证码</string>
    <string name="identify_code_get_hint">点击获取验证码</string>
    <string name="identify_id_number">身份证号</string>
    <string name="identify_realname">真实姓名</string>
    <string name="identify_send_phone">发送到手机号码:</string>
    <string name="identify_statement">国美在线不会以任何形式泄露或滥用您的个人信息</string>
    <string name="login_code_hit">请输入验证码</string>
    <string name="lower_price">降价榜</string>
    <string name="message_send_hint">短信已发送到您的手机，如在 120 秒之内还没有收到短信验证码，请重新获取验证码</string>
    <string name="mygome_activate_coupon_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="mygome_activate_desc">优惠券获得途径 &lt;br/> &lt;br/> 用户一般可以通过以下途径获得优惠券： &lt;br/> 1、促销活动指定界面领取； &lt;br/> 2、购物订单赠送优惠券，待确认收货后获得； &lt;br/> 3、消费积分兑换优惠券； &lt;br/> 4、成功参与家电维修、家电回收服务获得。 &lt;br/></string>
    <string name="mygome_default_activate_code">请输入激活码</string>
    <string name="mygome_default_coupon_code">请输入优惠券编号</string>
    <string name="mygome_my_order">我的订单</string>
    <string name="phone_recharge_1_10_to_get">自动充值，1-10分钟到账。</string>
    <string name="phone_recharge_already_pay">已付金额: </string>
    <string name="phone_recharge_common_question">常见问题</string>
    <string name="phone_recharge_continue">继续充值</string>
    <string name="phone_recharge_help_1">1.如何查询话费是否已经到账？</string>
    <string name="phone_recharge_help_11">答：您付款成功后，话费会在1至30分钟内充到您的手机中。您可以拨打运营商提供的免费客服电话查询余额以确认话费到账情况。 移动请拨打10086，联通拨打10010，电信请拨打10000。</string>
    <string name="phone_recharge_help_2">2.充值很长时间过去了，话费还没有到账是怎么回事？</string>
    <string name="phone_recharge_help_22">答：月末、月初充值高峰时段，用户较多，到账时间会有一定的延迟；如果长时间未到账，请提供手机查询密码与客服联系查询。</string>
    <string name="phone_recharge_help_3">3.充值时手机号码输入错误怎么办？</string>
    <string name="phone_recharge_help_33">答：如果您不小心充错了手机号码，款是不能退回来的，所以请您在填写手机号码的时候务必确认填写正确。</string>
    <string name="phone_recharge_help_4">4.手机充值是否需要手续费？</string>
    <string name="phone_recharge_help_44">答：不但不需要手续费，还可以享受最低至9.65折的优惠。</string>
    <string name="phone_recharge_order_num">订单编号: </string>
    <string name="phone_recharge_pay_success">订单支付成功！我们将尽快为您发货！</string>
    <string name="phone_recharge_pay_type">支付方式: </string>
    <string name="pre_sell_product_order_earnest">定金 :</string>
    <string name="pre_sell_product_order_feight">配送费 :</string>
    <string name="pre_sell_product_order_final">尾款 :</string>
    <string name="pre_sell_product_order_price">订单金额 :</string>
    <string name="pre_sell_product_order_use_acount">使用余额 :</string>
    <string name="pre_sell_product_pre_price">商品预售价 :</string>
    <string name="submit">提交</string>
    <string name="tip_id_number_hint">请输入身份证号</string>
    <string name="tip_realname_hint">请输入真实姓名</string>
</resources>