<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/common_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/vw_titlebar" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/modify_payment_password_two_rl" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
            <LinearLayout android:orientation="vertical" android:id="@id/register_table_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="6.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/weak_text_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/identify_statement" />
                <TextView android:textSize="12.0sp" android:textColor="@color/hint_text_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/identify_realname" />
                <com.gome.ecmall.business.login.layout.ClearEditText android:textSize="15.0sp" android:textColor="@color/main_default_black_text_color" android:textColorHint="@color/main_default_grey_text_color" android:id="@id/identify_realname" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="25.0dip" android:hint="@string/tip_realname_hint" android:singleLine="true" style="@style/gome.EditText.style" />
                <TextView android:textSize="12.0sp" android:textColor="@color/hint_text_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/identify_id_number" />
                <com.gome.ecmall.business.login.layout.ClearEditText android:textSize="15.0sp" android:textColor="@color/main_default_black_text_color" android:textColorHint="@color/main_default_grey_text_color" android:id="@id/identify_id_number" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="25.0dip" android:hint="@string/tip_id_number_hint" android:singleLine="true" android:maxLength="18" style="@style/gome.EditText.style" />
                <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:minHeight="45.0dip">
                    <TextView android:textSize="13.0sp" android:textColor="@color/weak_text_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/identify_send_phone" android:singleLine="true" />
                    <EditText android:textSize="13.0sp" android:textColor="@color/main_default_black_text_color" android:ellipsize="end" android:id="@id/identify_phone" android:background="#00000000" android:focusableInTouchMode="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="187016356565" android:singleLine="true" />
                </LinearLayout>
                <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textColor="@color/hint_text_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/identify_code" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
                    <com.gome.ecmall.business.login.layout.ClearEditText android:textSize="15.0sp" android:textColor="@color/main_default_black_text_color" android:textColorHint="@color/main_default_grey_text_color" android:id="@id/identify_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:minHeight="25.0dip" android:hint="@string/identify_code_get_hint" android:singleLine="true" android:layout_toLeftOf="@id/identify_code_get" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" style="@style/gome.EditText.style" />
                    <Button android:textSize="14.0sp" android:id="@id/identify_code_get" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/identify_code_get" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" style="@style/Gome.Button.SolidRed.Style" />
                </RelativeLayout>
                <TextView android:textSize="14.0sp" android:textColor="@color/hint_text_color" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/message_send_hint" />
            </LinearLayout>
            <Button android:textSize="18.0sp" android:id="@id/submit_button" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="10.0dip" android:text="@string/submit" android:layout_below="@id/register_table_layout" android:layout_centerHorizontal="true" style="@style/Gome.Button.SolidRed.Style" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>