<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/common_bg" style="@style/common_layout_fill_height_fill_width"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/vw_titlebar" />
    <ScrollView style="@style/common_layout_fill_height_fill_width">
        <LinearLayout android:orientation="vertical" style="@style/common_layout_fill_height_fill_width">
            <RelativeLayout android:id="@id/tableRow1" android:layout_marginTop="13.0dip" style="@style/activate_coupons_rl_style">
                <TextView android:id="@id/activate_coupon_number_title" android:text="@string/activate_coupons_number" android:layout_centerVertical="true" style="@style/activate_coupons_title_text" />
                <EditText android:id="@id/mygome_default_coupon_code_edit" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginRight="4.0dip" android:hint="@string/mygome_default_coupon_code" android:singleLine="true" android:digits="@string/mygome_activate_coupon_digits" android:layout_toLeftOf="@id/scan_coupon_code" android:layout_toRightOf="@id/activate_coupon_number_title" android:layout_centerVertical="true" android:inputType="textVisiblePassword" style="@style/gome.EditText.style" />
                <ImageView android:id="@id/mygome_default_coupon_code_del_imageView" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="18.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/public_appraise_deleted" android:layout_toLeftOf="@id/scan_coupon_code" android:layout_centerVertical="true" />
                <ImageView android:id="@id/scan_coupon_code" android:background="@drawable/mygome_activate_coupons_erweima_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="@dimen/activate_coupon_margin_left_and_right" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <TextView android:textColor="@color/price_text_color" android:id="@id/mygome_default_coupon_code_error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:text="@string/activate_coupons_prompt_coupons_invalid" />
            <RelativeLayout android:id="@id/tableRow2" android:layout_marginTop="@dimen/activate_coupon_margin_top" style="@style/activate_coupons_rl_style">
                <TextView android:id="@id/activate_coupon_activation_code_title" android:text="@string/activate_coupons_activation_code" android:layout_centerVertical="true" style="@style/activate_coupons_title_text" />
                <EditText android:id="@id/mygome_default_activate_code_edit" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginRight="15.0dip" android:hint="@string/mygome_default_activate_code" android:singleLine="true" android:digits="@string/mygome_activate_coupon_digits" android:layout_toLeftOf="@id/activate_code_del_imageView" android:layout_toRightOf="@id/activate_coupon_activation_code_title" android:layout_centerVertical="true" android:inputType="textVisiblePassword" style="@style/gome.EditText.style" />
                <ImageView android:id="@id/activate_code_del_imageView" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="18.0dip" android:layout_marginRight="@dimen/activate_coupon_margin_left_and_right" android:src="@drawable/public_appraise_deleted" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <TextView android:textColor="@color/price_text_color" android:id="@id/mygome_default_activate_code_error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:text="@string/activate_coupons_prompt_coupons_error" />
            <RelativeLayout android:id="@id/tableRow5" android:layout_marginTop="@dimen/activate_coupon_margin_top" style="@style/activate_coupons_rl_style">
                <TextView android:id="@id/activate_coupon_check_code_title" android:text="@string/activate_coupons_check_code" android:layout_centerVertical="true" style="@style/activate_coupons_title_text" />
                <EditText android:id="@id/identifying_code_edit" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginRight="15.0dip" android:hint="@string/login_code_hit" android:singleLine="true" android:maxLength="4" android:digits="@string/mygome_activate_coupon_digits" android:layout_toRightOf="@id/activate_coupon_check_code_title" android:layout_centerVertical="true" android:inputType="textVisiblePassword" style="@style/gome.EditText.style" />
                <ImageView android:id="@id/identifying_code_del_imageView" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="18.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/public_appraise_deleted" android:layout_toLeftOf="@id/identifying_code" android:layout_centerVertical="true" />
                <ImageView android:id="@id/identifying_code" android:background="@drawable/code" android:layout_width="60.0dip" android:layout_height="30.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="@dimen/activate_coupon_margin_left_and_right" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <TextView android:textColor="@color/price_text_color" android:id="@id/mygome_default_identifying_code_error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:text="@string/activate_coupons_prompt_check_code_error" />
            <Button android:ellipsize="end" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/activate_coupon_submit_button" android:paddingLeft="55.0dip" android:paddingTop="12.0dip" android:paddingRight="55.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="@dimen/activate_coupon_margin_top" android:layout_marginRight="20.0dip" android:text="@string/submit" android:singleLine="true" style="@style/Gome.Button.SolidRed.Style" />
            <TextView android:textColor="@color/weak_text_color" android:id="@id/activate_coupon_desc" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:text="@string/mygome_activate_desc" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>