<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/common_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/vw_titlebar" />
    <LinearLayout android:orientation="horizontal" android:background="@drawable/more_item_single_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <ImageView android:background="@drawable/order_success_smile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="15.0dip" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip">
            <TextView android:textColor="#ffff9c00" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/phone_recharge_pay_success" style="@style/phone_recharge_text_red_style" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_recharge_order_num" style="@style/phone_recharge_text_black_style" />
                <TextView android:id="@id/tv_phone_recharge_order_pay_success_ordernum" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/phone_recharge_text_black_style" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_recharge_already_pay" style="@style/phone_recharge_text_black_style" />
                <TextView android:id="@id/tv_phone_recharge_order_pay_success_already_pay_money" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/phone_recharge_text_red_style" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="15.0dip">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_recharge_pay_type" style="@style/phone_recharge_text_black_style" />
                <TextView android:id="@id/tv_phone_recharge_order_pay_success_pay_type" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/phone_recharge_text_black_style" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/phone_recharge_1_10_to_get" style="@style/phone_recharge_text_grey_style" />
    <LinearLayout android:orientation="horizontal" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip">
        <Button android:id="@id/bt_phone_recharge_order_pay_success_continue_recharge" android:background="@drawable/bottom_clean_btn" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_recharge_continue" android:layout_weight="1.0" style="@style/Gome.Button.StrokeGray.Style" />
        <Button android:id="@id/bt_phone_recharge_order_pay_success_myorder" android:background="@drawable/bottom_clean_btn" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/mygome_my_order" android:layout_weight="1.0" style="@style/Gome.Button.StrokeGray.Style" />
        <Button android:id="@id/bt_phone_recharge_order_pay_often_question" android:background="@drawable/bottom_clean_btn" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/phone_recharge_common_question" android:layout_weight="1.0" style="@style/Gome.Button.StrokeGray.Style" />
    </LinearLayout>
</LinearLayout>