<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:id="@id/ranking_list_title" android:background="@drawable/segments_bg" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/hot_sell" android:background="@drawable/segments_tabs_left_bg_selector" android:layout_width="0.0dip" android:layout_height="32.0dip" android:text="@string/hot_sell" android:layout_weight="1.0" style="@style/product_list_group_item_style" />
    <TextView android:id="@id/lower_price" android:background="@drawable/segments_tabs_middle_bg_selector" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="32.0dip" android:text="@string/lower_price" android:layout_weight="1.0" style="@style/product_list_group_item_style" />
    <TextView android:id="@id/hot_spot" android:background="@drawable/segments_tabs_right_bg_selector" android:layout_width="0.0dip" android:layout_height="32.0dip" android:text="@string/hot_spot" android:layout_weight="1.0" style="@style/product_list_group_item_style" />
</LinearLayout>